<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMoedaCorrente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moeda_corrente"
            android:layout_marginRight="15px"/>

        <TextView
            android:id="@+id/tvMoeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_moeda"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvValorConverter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_converter"/>

        <EditText
            android:id="@+id/etInputValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:width="5in"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvConverterPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_para"/>

        <EditText
            android:id="@+id/etInputMoeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginLeft="29px"
            android:width="5in"/>

        <Button
            android:id="@+id/btnPesquisar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pesquisa"
            android:onClick="btnPesquisarOnClick"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_converter"
        android:onClick="btnConverterOnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_historico"
        android:onClick="btnHistoricoOnClick"/>
</LinearLayout>